try fixing scrollbar, encryption logic, and everything hahahhaha

--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -6,7 +6,7 @@ div.highlighter-rouge, figure.highlight {
   position: relative;
   margin-bottom: 0.6em;
   padding: 0em 0.6em;
-  // border: 1px solid var(--global-border-color);
+  border: 1px solid var(--global-border-color);
   border-radius: $border-radius;
   // background-color: var(--global-code-background-color);
   background-color: #171717;
